--- a/index.html
+++ b/index.html
@@ -1,6 +1,74 @@
 
-<HTML><META HTTP-EQUIV="Content-type" CONTENT="text/html;charset=utf-8"><BODY TEXT=#000000 BGCOLOR=#FFFFFF LINK=00005F ALINK=33FFFF VLINK=00005F>
+<HTML><META HTTP-EQUIV="Content-type" CONTENT="text/html;charset=utf-8">
+<head>
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
 
+li {
+    float: left;
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+</style>
+</head>
+<BODY TEXT=#000000 BGCOLOR=#FFFFFF LINK=00005F ALINK=33FFFF VLINK=00005F>
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </li>
+    <li style="float:right"><a href="#about">About</a></li>
+
+</ul>
 <img src="img/Chrysanthemum.jpg" alt="Mountain View" style="width:304px;height:228px;">
 <img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
 <BR><b>Service Portal Update Notice</b>
@@ -10,7 +78,7 @@
 <BR>
 <BR><b>Activity Summary</b>
 <BR>================
-<BR>There is a scheduled Footprint Server Software Upgrade today 2nd Mar 2017
+<BR>There is a scheduled Server Software Upgrade today 2nd Mar 2017
 <BR>Time: 18:00pm - 23:59pm
 <BR>
 <BR>There is no impact to your ticket data, as this is a frontend upgrade.
@@ -26,6 +94,8 @@
 <BR>
 <BR>
 <BR>ITSM Team
-<BR>ITSM@nets.com.sg
-<BR></BODY></HTML></BODY></HTML>
+
+<BR>
+</BODY>
+</HTML>
 
